# faultier-python

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml
docs/source/: conf.py  faultier.rst  index.rst  modules.rst
faultier/: FaulterVis.py  Faultier.py  FaultierTool.py  GlitchDataCollection.py  LivePlot.py  RandomOrderGenerator.py  __init__.py
faultier/example_firmware/: nrf52832_xxaa.hex
